--- a/.gitignore
+++ b/.gitignore
@@ -1,19 +1,21 @@
-/target
-/lib
-/classes
-/checkouts
-pom.xml
-prod-config.edn
-dev-config.edn
-test-config.edn
-*.jar
-*.class
-/.lein-*
-profiles.clj
-/.env
-.nrepl-port
-/.shadow-cljs
-/node_modules
-/log
+node_modules/
+public/js
 
+/target
+/checkouts
+/src/gen
+
+pom.xml
+pom.xml.asc
+*.iml
+*.jar
+*.log
+.shadow-cljs
+.idea
+.lein-*
+.nrepl-*
+.DS_Store
+
+.hgignore
+.hg/
 
