--- a/package.json
+++ b/package.json
@@ -1,8 +1,11 @@
 {
   "devDependencies": {
+    "sass": "^1.49.7",
     "shadow-cljs": "^2.14.3"
   },
   "dependencies": {
+    "bulma": "^0.9.3",
+    "material-icons": "^1.10.6",
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
   }
